force-app/main/default/objects/SLL_Group_Approval_History__c/SLL_Group_Approval_History__c.object-meta.xml
<CustomObject>
    <label>SLL Group Approval History</label>
    <nameField>
        <displayFormat>SG-Req-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLL Group Approval Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>