force-app/main/default/objects/SLL_Group_Approval_History__c/fields/Approver1__c.field-meta.xml
<CustomField>
    <fullName>Approver1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SLL_Group_Approval_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>