force-app/main/default/objects/SLL_Group_Approval_History__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SLL Group Approval Histories</relationshipLabel>
    <relationshipName>SLL_Group_Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>