force-app/main/default/objects/SLL_Group_Approval_History__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SLL_Group_Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>