force-app/main/default/objects/SLL_Group_Approval_History__c/fields/SLL_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>SLL_Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLL Group Member</label>
    <referenceTo>SLL_Group_Member__c</referenceTo>
    <relationshipLabel>SLL Group Approval Histories</relationshipLabel>
    <relationshipName>SLL_Group_Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>