force-app/main/default/objects/SLL_Group_Approval_History__c/fields/SLL_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>SLL_Group_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLL Group Name</label>
    <referenceTo>SLL_Group__c</referenceTo>
    <relationshipLabel>SLL Group Approval Histories</relationshipLabel>
    <relationshipName>SLL_Group_Approval_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>