force-app/main/default/objects/SLL_Group_Approval_History__c/fields/SLL_Group_Status__c.field-meta.xml
<CustomField>
    <fullName>SLL_Group_Status__c</fullName>
    <formula>IF(ISBLANK(SLL_Group_Name__c), &quot;&quot;, IF(SLL_Group_Name__r.Is_Active__c = TRUE, &quot;Active&quot;, &quot;Inactive&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLL Group Status</label>
    <type>Text</type>
</CustomField>