force-app/main/default/objects/SLL_Group_Approval_History__c/validationRules/Validate_Customer_RecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Customer_RecordType</fullName>
    <active>true</active>
    <errorConditionFormula>Customer__r.RecordType.Name  &lt;&gt; &quot;Existing Customer&quot;</errorConditionFormula>
    <errorMessage>please select Existing Customer Type.</errorMessage>
</ValidationRule>